# md2docx

./: .gitignore  LICENSE  README.md  docx2md.py  main.py  md2docx.py  mmd2drawio.py  pyproject.toml  requirements.txt  run_ui.py  ui_app.py
